AP-1403: Autosave on articles
git-svn-id: https://opensource.kantega.no/svn/openaksess/branches/aksess-autosave@3874 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/admin/css/default.css
+++ b/modules/webapp/src/webapp/admin/css/default.css
@@ -533,6 +533,12 @@ table.fullWidth {
 }
 
 
+#AutoSaveStatus {
+    float:right;
+    display:none;
+    padding-right: 20px;
+}
+
 /************** Buttons **************/
 #Content .buttonBar {
     height: 50px;
